Fix for issue #2663
Corrected web.metrics.prometheus.buckets to output a slice of floats to configmap

Corrected web.metrics.datadog.address to output a string to configmap

Corrected web.metrics.statsd.address to output a string to configmap

Updated values.yaml web.metrics.datadog.pushInterval to match documentation

Updated values.yaml web.metrics.statsd.pushInterval to match documentation

Removed extraneous whitespace from web.metrics section of the configmap template

Updated README.md to reflect changes

--- a/stable/traefik/values.yaml
+++ b/stable/traefik/values.yaml
@@ -89,12 +89,12 @@ rbac:
 metrics:
   prometheus:
     enabled: false
-    buckets: 0.1,0.3,1.2,5
+    # buckets: [0.1,0.3,1.2,5]
   datadog:
     enabled: false
-    # address: "localhost:8125"
-    # pushInterval: 30s
+    # address: localhost:8125
+    # pushInterval: 10s
   statsd:
     enabled: false
-    # address: "localhost:8125"
-    # pushInterval: 30s
+    # address: localhost:8125
+    # pushInterval: 10s
