[stable/ghost] #1785 namespace defined templates with chart name (#2147)

--- a/stable/ghost/templates/deployment.yaml
+++ b/stable/ghost/templates/deployment.yaml
@@ -1,10 +1,10 @@
-{{- if include "host" . -}}
+{{- if include "ghost.host" . -}}
 apiVersion: extensions/v1beta1
 kind: Deployment
 metadata:
-  name: {{ template "fullname" . }}
+  name: {{ template "ghost.fullname" . }}
   labels:
-    app: {{ template "fullname" . }}
+    app: {{ template "ghost.fullname" . }}
     chart: "{{ .Chart.Name }}-{{ .Chart.Version }}"
     release: "{{ .Release.Name }}"
     heritage: "{{ .Release.Service }}"
@@ -13,7 +13,7 @@ spec:
   template:
     metadata:
       labels:
-        app: {{ template "fullname" . }}
+        app: {{ template "ghost.fullname" . }}
     spec:
       initContainers:
       - name: volume-permissions
@@ -24,21 +24,21 @@ spec:
         - mountPath: /bitnami
           name: ghost-data
       containers:
-      - name: {{ template "fullname" . }}
+      - name: {{ template "ghost.fullname" . }}
         image: "{{ .Values.image }}"
         imagePullPolicy: {{ default "" .Values.imagePullPolicy | quote }}
         env:
         - name: MARIADB_HOST
-          value: {{ template "mariadb.fullname" . }}
+          value: {{ template "ghost.mariadb.fullname" . }}
         - name: MARIADB_PORT_NUMBER
           value: "3306"
         - name: MARIADB_PASSWORD
           valueFrom:
             secretKeyRef:
-              name: {{ template "mariadb.fullname" . }}
+              name: {{ template "ghost.mariadb.fullname" . }}
               key: mariadb-root-password
         - name: GHOST_HOST
-          value: {{ include "host" . | quote }}
+          value: {{ include "ghost.host" . | quote }}
         - name: GHOST_PORT_NUMBER
           value: {{ default "80" .Values.ghostPort | quote }}
         - name: GHOST_USERNAME
@@ -46,7 +46,7 @@ spec:
         - name: GHOST_PASSWORD
           valueFrom:
             secretKeyRef:
-              name: {{ template "fullname" . }}
+              name: {{ template "ghost.fullname" . }}
               key: ghost-password
         - name: GHOST_EMAIL
           value: {{ default "" .Values.ghostEmail | quote }}
@@ -61,7 +61,7 @@ spec:
         - name: SMTP_PASSWORD
           valueFrom:
             secretKeyRef:
-              name: {{ template "fullname" . }}
+              name: {{ template "ghost.fullname" . }}
               key: smtp-password
         - name: SMTP_SERVICE
           value: {{ default "" .Values.smtpService | quote }}
@@ -74,7 +74,7 @@ spec:
             port: http
             httpHeaders:
             - name: Host
-              value: {{ include "host" . | quote }}
+              value: {{ include "ghost.host" . | quote }}
           initialDelaySeconds: 120
           timeoutSeconds: 5
           failureThreshold: 6
@@ -84,7 +84,7 @@ spec:
             port: http
             httpHeaders:
             - name: Host
-              value: {{ include "host" . | quote }}
+              value: {{ include "ghost.host" . | quote }}
           initialDelaySeconds: 30
           timeoutSeconds: 3
           periodSeconds: 5
@@ -97,7 +97,7 @@ spec:
       - name: ghost-data
       {{- if .Values.persistence.enabled }}
         persistentVolumeClaim:
-          claimName: {{ template "fullname" . }}
+          claimName: {{ template "ghost.fullname" . }}
       {{- else }}
         emptyDir: {}
       {{- end }}
