Link Datadog Deployment to Configmaps
This commit adds a hash annotation to each of the configmaps in this
chart, as well as the deployment that is dependent on these configmaps.
This will cause the deployment to restart its pods if any of these
configmaps changes.

--- a/stable/datadog/templates/autoconf-configmap.yaml
+++ b/stable/datadog/templates/autoconf-configmap.yaml
@@ -7,6 +7,8 @@ metadata:
     chart: "{{ .Chart.Name }}-{{ .Chart.Version }}"
     release: "{{ .Release.Name }}"
     heritage: "{{ .Release.Service }}"
+  annotations:
+    checksum/autoconf-config: {{ toYaml .Values.datadog.autoconf | sha256sum }}
 data:
 {{- if .Values.datadog.autoconf }}
 {{ toYaml .Values.datadog.autoconf | indent 2 }}
