--- a/stable/datadog/templates/confd-configmap.yaml
+++ b/stable/datadog/templates/confd-configmap.yaml
@@ -7,6 +7,8 @@ metadata:
     chart: "{{ .Chart.Name }}-{{ .Chart.Version }}"
     release: "{{ .Release.Name }}"
     heritage: "{{ .Release.Service }}"
+  annotations:
+    checksum/confd-config: {{ toYaml .Values.datadog.confd | sha256sum }}
 data:
 {{- if .Values.datadog.confd }}
 {{ toYaml .Values.datadog.confd | indent 2 }}
