--- a/stable/datadog/templates/deployment.yaml
+++ b/stable/datadog/templates/deployment.yaml
@@ -13,6 +13,10 @@ spec:
       labels:
         app: {{ template "datadog.fullname" . }}
       name: {{ template "datadog.fullname" . }}
+      annotations:
+        checksum/autoconf-config: {{ toYaml .Values.datadog.autoconf | sha256sum }}
+        checksum/confd-config: {{ toYaml .Values.datadog.confd | sha256sum }}
+        checksum/checksd-config: {{ toYaml .Values.datadog.checksd | sha256sum }}
     spec:
       containers:
       - name: {{ .Chart.Name }}
