Changed "shared_secret" to camel case

--- a/incubator/drone/templates/secrets.yaml
+++ b/incubator/drone/templates/secrets.yaml
@@ -9,8 +9,8 @@ metadata:
     heritage: "{{ .Release.Service }}"
 type: Opaque
 data:
-  {{ if .Values.shared_secret }}
-  secret: "{{ .Values.shared_secret | b64enc }}"
+  {{ if .Values.sharedSecret }}
+  secret: "{{ .Values.sharedSecret | b64enc }}"
   {{ else }}
   secret: "{{ randAlphaNum 24 | b64enc }}"
   {{ end }}
