--- a/incubator/drone/values.yaml
+++ b/incubator/drone/values.yaml
@@ -112,4 +112,4 @@ agent:
 ## Uncomment this if you want to set a specific shared secret between
 ## the agents and servers, otherwise this will be auto-generated.
 ##
-# shared_secret: supersecret
+# sharedSecret: supersecret
