--- a/stable/kube2iam/values.yaml
+++ b/stable/kube2iam/values.yaml
@@ -14,6 +14,12 @@ image:
   tag: 0.7.0
   pullPolicy: IfNotPresent
 
+# AWS Access keys to inject as environment variables
+aws:
+  secret_key: ""
+  access_key: ""
+  region: ""
+
 ## Node labels for pod assignment
 ## Ref: https://kubernetes.io/docs/user-guide/node-selection/
 ##
