--- a/stable/minio/templates/post-install-create-bucket-pod.yaml
+++ b/stable/minio/templates/post-install-create-bucket-pod.yaml
@@ -12,6 +12,10 @@ metadata:
     "helm.sh/hook": post-install
 spec:
   restartPolicy: OnFailure
+{{- if .Values.nodeSelector }}
+  nodeSelector:
+{{ toYaml .Values.nodeSelector | indent 4 }}
+{{- end }}
   containers:
   - name: minio-mc
     image: minio/mc
