[stable/traefik] Update Values.yaml to show exmple of defining the Ingress labels

--- a/stable/traefik/values.yaml
+++ b/stable/traefik/values.yaml
@@ -48,6 +48,8 @@ dashboard:
   ingress:
     # annotations:
     #   key: value
+    # labels:
+    #   key: value
   auth:
     # basic:
     #   username: password
