Use port 8880 to avoid conflicts. Use named ports
In another chart I worked on it was recommended to use named container
ports. I'm following that advice here.

I am also avoiding the 8080 dashboard conflict by switching the http
alternate port (httpn) to 8880.

--- a/stable/traefik/templates/deployment.yaml
+++ b/stable/traefik/templates/deployment.yaml
@@ -72,11 +72,19 @@ spec:
           name: acme
         {{- end }}
         ports:
-        - containerPort: 80
-        - containerPort: 8080
-        - containerPort: 443
+        - name: http
+          containerPort: 80
+          protocol: TCP
+        - name: httpn
+          containerPort: 8880
+          protocol: TCP
+        - name: https
+          containerPort: 443
+          protocol: TCP
         {{- if .Values.dashboard.enabled }}
-        - containerPort: 8080
+        - name: dash
+          containerPort: 8080
+          protocol: TCP
         {{- end }}
         args:
         - --configfile=/config/traefik.toml
