[incubator/elasticsearch] pvc name value
The uses a configurable template value for the name parameter of the pvc
section of the data and master statefulset templates. The default is set
to `data` and so remains unchanged to any dependent user.

A little background: We currently have a production ES cluster using a
locally maintained elasticsearch chart and we want to migrate to using
this chart. A blocker at the moment is that our pvc name is `storage`
instead of `data`. To avoid needing to create a new cluster (which is
close to a TB in storage) and migrating, we can simply set this
parameter to `storage` and we can continue to use the pvc currently in
place.

--- a/incubator/elasticsearch/templates/data-statefulset.yaml
+++ b/incubator/elasticsearch/templates/data-statefulset.yaml
@@ -126,7 +126,7 @@ spec:
   {{- else }}
   volumeClaimTemplates:
   - metadata:
-      name: data
+      name: {{ .Values.data.persistence.name }}
     spec:
       accessModes:
         - {{ .Values.data.persistence.accessMode | quote }}
