--- a/incubator/elasticsearch/templates/master-statefulset.yaml
+++ b/incubator/elasticsearch/templates/master-statefulset.yaml
@@ -122,7 +122,7 @@ spec:
   {{- else }}
   volumeClaimTemplates:
   - metadata:
-      name: data
+      name: {{ .Values.master.persistence.name }}
     spec:
       accessModes:
         - {{ .Values.master.persistence.accessMode | quote }}
