--- a/incubator/elasticsearch/values.yaml
+++ b/incubator/elasticsearch/values.yaml
@@ -38,6 +38,7 @@ master:
   persistence:
     enabled: true
     accessMode: ReadWriteOnce
+    name: data
     size: "4Gi"
     # storageClass: "ssd"
   antiAffinity: "soft"
@@ -56,6 +57,7 @@ data:
   persistence:
     enabled: true
     accessMode: ReadWriteOnce
+    name: data
     size: "30Gi"
     # storageClass: "ssd"
   terminationGracePeriodSeconds: 3600
