Remove unneeded brackets in values.yaml

--- a/stable/msoms/values.yaml
+++ b/stable/msoms/values.yaml
@@ -29,6 +29,5 @@ resources:
     memory: 768Mi  
 
 # Node selector - default to Linux as cannot deploy OMS agent container to Windows nodes
-nodeSelector: {
+nodeSelector:
   beta.kubernetes.io/os: linux
-  }
