[stable/msoms] Add nodeSelector and toleration (#2348)
* Add Microsoft OMS linux agent helm chart

* updated files per comments

* Add nodeSelector and latest release

* Update chart version and appVersion

* Add default node selector

* Add toleration and change agentVersion annotation to image tag.

* Fix missing "end"

* Set Docker provider to 10.0.0-28

* Remove unneeded brackets in values.yaml

--- a/stable/msoms/templates/omsagent-daemonset.yaml
+++ b/stable/msoms/templates/omsagent-daemonset.yaml
@@ -17,8 +17,8 @@ spec:
     release: {{ .Release.Name }}
     app: {{ template "msoms.name" .   }}
    annotations:
-    agentVersion: 1.4.0-45
-    dockerProviderVersion: 10.0.0-27
+    agentVersion: {{ .Values.omsagent.image.tag }}
+    dockerProviderVersion: 10.0.0-28
   spec:
    containers:
      - name: {{ template "msoms.name" . }}
@@ -59,4 +59,14 @@ spec:
     - name: omsagent-secret
       secret:
        secretName: {{ template "msoms.fullname" .}}
+{{- if .Values.nodeSelector }}       
+   nodeSelector:
+{{ toYaml .Values.nodeSelector | indent 4 }}     
+{{- end }}         
+   # Tolerate a NoSchedule taint on master that ACS Engine sets.
+   tolerations:
+    - key: "node-role.kubernetes.io/master"
+      operator: "Equal"
+      value: "true"
+      effect: "NoSchedule"
 {{- end }}               
