--- a/stable/redis-ha/templates/redis-master-statefulset.yaml
+++ b/stable/redis-ha/templates/redis-master-statefulset.yaml
@@ -48,7 +48,7 @@ spec:
       - name: data
       {{- if .Values.persistentVolume.enabled }}
         persistentVolumeClaim:
-          claimName: {{ if .Values.persistentVolume.existingClaim }}{{ .Values.persistentVolume.existingClaim }}{{- else }}{{ template "fullname" . }}{{- end }}
+          claimName: {{ template "fullname" . }}-master
       {{- else }}
         emptyDir: {}
       {{- end -}}
