[stable/owncloud] #1785 namespace defined templates with chart name (#2165)

--- a/stable/owncloud/templates/apache-pvc.yaml
+++ b/stable/owncloud/templates/apache-pvc.yaml
@@ -2,7 +2,7 @@
 kind: PersistentVolumeClaim
 apiVersion: v1
 metadata:
-  name: {{ template "fullname" . }}-apache
+  name: {{ template "owncloud.fullname" . }}-apache
 spec:
   accessModes:
     - {{ .Values.persistence.apache.accessMode | quote }}
