--- a/incubator/kafka/templates/statefulset.yaml
+++ b/incubator/kafka/templates/statefulset.yaml
@@ -53,10 +53,11 @@ spec:
   volumeClaimTemplates:
   - metadata:
       name: datadir
-      annotations:
-        volume.alpha.kubernetes.io/storage-class: anything
     spec:
       accessModes: [ "ReadWriteOnce" ]
       resources:
         requests:
           storage: {{ .Values.Storage }}
+      {{- if .Values.StorageClass }}
+      storageClassName: {{ .Values.StorageClass | quote }}
+      {{- end }}
