[stable/etcd-operator] Update rbac cluster role for etcd-operator (#2482)
* [stable/etcd-operator] Update rbac cluster role for etcd-operator

* Lint

--- a/stable/etcd-operator/templates/rbac.yaml
+++ b/stable/etcd-operator/templates/rbac.yaml
@@ -17,9 +17,21 @@ rules:
   verbs:
   - "*"
 - apiGroups:
+  - etcd.database.coreos.com
+  resources:
+  - etcdclusters
+  verbs:
+  - "*"
+- apiGroups:
   - extensions
   resources:
   - thirdpartyresources
+  verbs:
+  - "*"
+- apiGroups:
+  - apiextensions.k8s.io
+  resources:
+  - customresourcedefinitions
   verbs:
   - "*"
 - apiGroups:
