--- a/stable/etcd-operator/values.yaml
+++ b/stable/etcd-operator/values.yaml
@@ -20,8 +20,9 @@ nodeSelector: {}
 
 ## etcd-operator specific values
 ## additional command arguments go here; will be translated to `--key=value` form
-commandArgs:
-  # analytics: true
+## e.g.,
+##   analytics: true
+commandArgs: {}
 
 ## etcd-cluster specific values
 cluster:
