--- a/stable/datadog/templates/deployment.yaml
+++ b/stable/datadog/templates/deployment.yaml
@@ -95,6 +95,7 @@ spec:
           configMap:
             name: {{ template "datadog.autoconf.fullname" . }}
 {{- if .Values.datadog.volumes }}
+      serviceAccountName: {{ if .Values.rbac.create }}{{ template "datadog.fullname" . }}{{ else }}"{{ .Values.rbac.serviceAccountName }}"{{ end }}
 {{ toYaml .Values.datadog.volumes | indent 8 }}
 {{- end }}
 {{ end }}
