--- a/stable/nfs-client-provisioner/values.yaml
+++ b/stable/nfs-client-provisioner/values.yaml
@@ -4,7 +4,7 @@
 replicaCount: 1
 image:
   repository: quay.io/external_storage/nfs-client-provisioner
-  tag: latest
+  tag: v2.0.1
   pullPolicy: IfNotPresent
 
 storageclass:
