[stable/datadog] Tag pods for deployments service to only use deployment

--- a/stable/datadog/templates/deployment.yaml
+++ b/stable/datadog/templates/deployment.yaml
@@ -12,6 +12,7 @@ spec:
     metadata:
       labels:
         app: {{ template "datadog.fullname" . }}
+        type: deployment
       name: {{ template "datadog.fullname" . }}
       annotations:
         checksum/autoconf-config: {{ toYaml .Values.datadog.autoconf | sha256sum }}
