--- a/incubator/keycloak/templates/ingress.yaml
+++ b/incubator/keycloak/templates/ingress.yaml
@@ -4,7 +4,7 @@ kind: Ingress
 metadata:
   name: {{ template "keycloak.fullname" . }}
   labels:
-    app: {{ template "keycloak.fullname" . }}
+    app: {{ template "keycloak.name" . }}
     chart: "{{ .Chart.Name }}-{{ .Chart.Version }}"
     release: "{{ .Release.Name }}"
     heritage: "{{ .Release.Service }}"
