--- a/incubator/keycloak/templates/service.yaml
+++ b/incubator/keycloak/templates/service.yaml
@@ -7,7 +7,7 @@ metadata:
 {{ toYaml .Values.keycloak.service.annotations | indent 4 }}
 {{- end }}
   labels:
-    app: {{ template "keycloak.fullname" . }}
+    app: {{ template "keycloak.name" . }}
     chart: "{{ .Chart.Name }}-{{ .Chart.Version }}"
     release: "{{ .Release.Name }}"
     heritage: "{{ .Release.Service }}"
@@ -25,4 +25,5 @@ spec:
     {{ end }}
     protocol: TCP
   selector:
-    app: {{ template "keycloak.fullname" . }}
+    app: {{ template "keycloak.name" . }}
+    release: "{{ .Release.Name }}"
