Use the rolling update strategy for updates

--- a/stable/consul/templates/consul.yaml
+++ b/stable/consul/templates/consul.yaml
@@ -77,6 +77,8 @@ metadata:
 spec:
   serviceName: "{{ template "fullname" . }}"
   replicas: {{ default 3 .Values.Replicas }}
+  updateStrategy:
+    type: RollingUpdate
   template:
     metadata:
       name: "{{ template "fullname" . }}"
