--- a/stable/prometheus-to-sd/values.yaml
+++ b/stable/prometheus-to-sd/values.yaml
@@ -3,13 +3,13 @@ image:
   repository: gcr.io/google-containers/prometheus-to-sd
   tag: v0.2.2
   pullPolicy: IfNotPresent
-resources:
-  limits:
-   cpu: 50m
-   memory: 64Mi
-  requests:
-   cpu: 50m
-   memory: 64Mi
+resources: {}
+  # limits:
+  #  cpu: 50m
+  #  memory: 64Mi
+  # requests:
+  #  cpu: 50m
+  #  memory: 64Mi
 port: 6060
 metricsSources: {}
   # kube-state-metrics: http://kube-state-metrics:8080
