--- a/incubator/keycloak/templates/secrets.yaml
+++ b/incubator/keycloak/templates/secrets.yaml
@@ -9,4 +9,8 @@ metadata:
     heritage: "{{ .Release.Service }}"
 type: Opaque
 data:
+  {{ if .Values.keycloak.password }}
   keycloak-password:  {{ .Values.keycloak.password | b64enc | quote }}
+  {{ else }}
+  keycloak-password: {{ randAlphaNum 10 | b64enc | quote }}
+  {{ end }}
