[stable/nginx-ingress] add HPA in case of Deployment

--- a/stable/nginx-ingress/values.yaml
+++ b/stable/nginx-ingress/values.yaml
@@ -93,6 +93,12 @@ controller:
   #    cpu: 100m
   #    memory: 64Mi
 
+  autoscaling:
+    enabled: false
+  #  minReplicas: 1
+  #  maxReplicas: 11
+  #  targetAverageUtilization: 50
+
   service:
     annotations: {}
     clusterIP: ""
