Add option for disabling the Prometheus server component.
When deploying components individually, there is no option to deploy
without the server component of Prometheus. This PR adds support for
deploying the Prometheus Gateway/Aletmanager/NodeExport, without being
coupled to the Server Deployment.

--- a/stable/prometheus/templates/server-ingress.yaml
+++ b/stable/prometheus/templates/server-ingress.yaml
@@ -1,4 +1,4 @@
-{{- if .Values.server.ingress.enabled -}}
+{{- if and .Values.server.enabled .Values.server.ingress.enabled -}}
 {{- $releaseName := .Release.Name -}}
 {{- $serviceName := include "prometheus.server.fullname" . }}
 {{- $servicePort := .Values.server.service.servicePort -}}
