--- a/stable/prometheus/templates/server-deployment.yaml
+++ b/stable/prometheus/templates/server-deployment.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.server.enabled -}}
 apiVersion: extensions/v1beta1
 kind: Deployment
 metadata:
@@ -107,3 +108,4 @@ spec:
           hostPath:
             path: {{ .hostPath }}
       {{- end }}
+{{- end }}
