add optional persistence to chartmuseum and upgrade image to latest release
- upgrade chartmuseum image to v0.2.4
- add a PVC to persist the storage folder so charts published charts surive pod restarts
- add option to disable persistance

--- a/incubator/chartmuseum/templates/deployment.yaml
+++ b/incubator/chartmuseum/templates/deployment.yaml
@@ -40,3 +40,14 @@ spec:
           name: storage-volume
         resources:
 {{ toYaml .Values.resources | indent 10 }}
+      volumes:
+{{- if .Values.persistence.volumes }}
+{{ toYaml .Values.persistence.volumes | indent 6 }}
+{{- end }}
+      - name: storage-volume
+      {{- if .Values.persistence.Enabled }}
+        persistentVolumeClaim:
+          claimName: {{ .Values.persistence.ExistingClaim | default (include "common.fullname" .) }}
+      {{- else }}
+        emptyDir: {}
+      {{- end -}}
