use {{ .Release.Name }} for resource naming

--- a/stable/prometheus-to-sd/templates/deployment.yaml
+++ b/stable/prometheus-to-sd/templates/deployment.yaml
@@ -1,7 +1,7 @@
 apiVersion: extensions/v1beta1
 kind: Deployment
 metadata:
-  name: {{ template "prometheus-to-sd.fullname" . }}
+  name: {{ .Release.Name }}
   labels:
     app: {{ template "prometheus-to-sd.name" . }}
     chart: {{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}
