--- a/incubator/redis-exporter/templates/service.yaml
+++ b/incubator/redis-exporter/templates/service.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ template "redis-exporter.fullname" . }}
+  name: {{ .Release.Name }}
   labels:
     app: {{ template "redis-exporter.name" . }}
     chart: {{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}
