--- a/stable/datadog/values.yaml
+++ b/stable/datadog/values.yaml
@@ -146,3 +146,9 @@ datadog:
     limits:
       cpu: 256m
       memory: 512Mi
+
+rbac:
+  create: false
+  serviceAccountName: default
+
+tolerations: []
