CoreDNS chart: update to latest version
Update CoreDNS' chart to version 0.9.10 and replace occurences of
middleware with the plugin as this is also used upstream.

--- a/stable/coredns/Chart.yaml
+++ b/stable/coredns/Chart.yaml
@@ -1,6 +1,6 @@
 name: coredns
-version: 0.6.0
-description: CoreDNS is a DNS server that chains middleware and provides Kubernetes
+version: 0.9.10
+description: CoreDNS is a DNS server that chains plugins and provides Kubernetes
   DNS Services
 keywords:
 - coredns
