Redis: adding annotation and service type to redis setup (#2586)
* Adding service type and service annotations to redis

* redis: bumping the redis version

*    [stable/redis]
   Adding service.annotations and service.loadBalancerIP to readme. I see mix naming conventions that is confusing but still I try to do the change in a backward compatible manner

*    [stable/redis] bumping the version to 1.0.3

--- a/stable/redis/values.yaml
+++ b/stable/redis/values.yaml
@@ -90,3 +90,7 @@ networkPolicy:
   ## (with the correct destination port).
   ##
   allowExternal: true
+
+service:
+  annotations: {}
+  loadBalancerIP:
